# refactor

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: parallel_processing.md
epyon/: __init__.py  cli.py  display.py
epyon/commands/: __init__.py  def_mover.py  import_replacer.py
epyon/core/: call_replacer.py  def_mover.py  import_replacer.py  utils.py
refactor/: __init__.py  cli.py  display.py
refactor/commands/: base.py  import_replacer.py
refactor/core/: import_replacer.py
scripts/: release.sh
tests/: __init__.py  test_call_replacer.py  test_cli.py  test_def_mover.py  test_display.py  test_import_replacer.py  test_integration.py
