[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epyon"
version = "0.1.3"
description = "A command-line tool for safely refactoring Python imports, named after the transformative Gundam Epyon"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "James Carr", email = "james.freaking.carr@gmail.com" },
]
keywords = ["refactoring", "imports", "python", "cli", "gundam"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "libcst>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/jamescarr/epyon"
Repository = "https://github.com/jamescarr/epyon.git"
Documentation = "https://github.com/jamescarr/epyon#readme"
"Bug Tracker" = "https://github.com/jamescarr/epyon/issues"

[project.scripts]
epyon = "epyon.cli:app"

[tool.pytest.ini_options]
addopts = "--cov=epyon --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "B", "I"]
